tests/baselines/reference/implementsIncorrectlyNoAssertion.errors.txt
implementsIncorrectlyNoAssertion.ts(9,5): error TS2416: Property 'x' in type 'Baz' is not assignable to the same property in base type 'Foo & Bar'.
  Type 'number' is not assignable to type 'string'.
implementsIncorrectlyNoAssertion.ts(9,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementsIncorrectlyNoAssertion.ts(10,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.


==== implementsIncorrectlyNoAssertion.ts (3 errors) ====
    declare class Foo {
        x: string;
    }
    declare class Bar {
        y: string;
    }
    type Wrapper = Foo & Bar;
    class Baz implements Wrapper {
        x: number;
        ~
!!! error TS2416: Property 'x' in type 'Baz' is not assignable to the same property in base type 'Foo & Bar'.
!!! error TS2416:   Type 'number' is not assignable to type 'string'.
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        y: string;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    